feat: distribute versioned reference service
